hphp/test/zend/good/ext/sockets/tests/socket_set_option_seolinger.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (!extension_loaded('sockets')) {
        die('SKIP sockets extension not available.');
}
}
